--- a/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q3.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q3.md
@@ -13,7 +13,7 @@
 #### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][fin]
 ```diff
 
-!
+! 
 
 
 
@@ -25,6 +25,9 @@
 #### Products [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Products%20Logo%201.jpg" />][products]
 ```diff
 
++ Pentatonic is having a strong perceived value, hence one of the leaders in the segment
++ Pentatonic is now 30% of Revenues as against 7% in FY19
++ Due to Pentatonic the GP margins of the company have gone from 22% in FY17 to 33% today
 + 
 
 
@@ -55,7 +58,7 @@
 #### Strategy [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Strategy%20Logo%203.jpg" />][strategy]
 ```diff
 
-# 
+# 5 Point Strategy for Pentatonic: 
 
 
 ```
@@ -65,7 +68,8 @@
 #### Industry   [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Industry%20Logo%201.jpg" />][ind]
 ```diff
 
-@@
+@@ Writing Instruments market share: 8% @@
+@@ 
 
 ```
 [management]: https://eresh-zealous.medium.com/
