--- a/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q3.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q3.md
@@ -13,7 +13,10 @@
 #### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][fin]
 ```diff
 
-! 
+! Better margins and profits because of 4 reasons: 1. Improved product mix 2.Increase in selling prices of legacy products
+! 3. Better input/RM prices 4.Strengthing of USD
+! Debt: Company is debt free with fcf of 16crores
+!
 
 
 
@@ -43,7 +46,9 @@
 
 #### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][capex]
 ```diff
+- Currently they employe 1200 female workers
 - 
+
 
 
 
@@ -58,7 +63,11 @@
 #### Strategy [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Strategy%20Logo%203.jpg" />][strategy]
 ```diff
 
-# 5 Point Strategy for Pentatonic: 
+# Linc 2.0 is the new Strategy: It is a 5 point strategy
+# 1.Touchpoints: Increase touchpoints. India has 10Mn kirana outlets. Currently Linc has reached 2.4L outlets.
+# Will take this number to 5L by FY25.
+# 2.Focus on higher margin products. Most developments under the pentatonic portfolio: 3 products to be launch in FY24
+# 3.Stationery Products: Using the Deli brand, they will make bigger inroads.
 
 
 ```
