--- a/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q3.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q3.md
@@ -31,6 +31,10 @@
 + Pentatonic is having a strong perceived value, hence one of the leaders in the segment
 + Pentatonic is now 30% of Revenues as against 7% in FY19
 + Due to Pentatonic the GP margins of the company have gone from 22% in FY17 to 33% today
++ Hauser(Flair) is a copy of the Pentatonic brand
++ Deli: With Deli currently main focus is the Calculator. Since there is only one big
++ player- Casio. So the goal is to get to number 2 over here.
++ And second product under Deli is the scissor.
 + 
 
 
@@ -47,7 +51,10 @@
 #### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][capex]
 ```diff
 - Currently they employe 1200 female workers
-- 
+- Modular expansion of existing capacity is being done near the existing factory.
+- Basic Infra setup has been done. Total cost will be Rs.50 Crores and until FY24 almost 35 Crores
+- First Phase will increase the capacity by 5L pens/day and that will cost Rs.35 Crores
+- Currently they use 80% of the existing capacity and 100% in peak months
 
 
 
@@ -68,8 +75,22 @@
 # Will take this number to 5L by FY25.
 # 2.Focus on higher margin products. Most developments under the pentatonic portfolio: 3 products to be launch in FY24
 # 3.Stationery Products: Using the Deli brand, they will make bigger inroads.
-
-
+# Advertisement Spend: 3% of Revenues are spent on Ads. The idea is to create a brand recall, so that when the consumer
+# goes to the store they should have Linc on top of their minds. For any FMCG product distribution network is the key.
+# They are not very heavy or aggressive on ads- maybe because of the lower margin products
+# Currently they have two displays: A 50 pen and a 100 pen display. There are some retailers who buy 50 and some 100
+# Most retailers are billed monthly, some are billed every 2-3 months
+# Out of the total 240,000 outlets- Deli penetration is only at 15,000 outlets
+# In FY20 they had only 65,000 Stationery stores and doing sales of 320 Crores domestically, i.e 40k per store
+# But this number cannot be multiplied because now Kirana stores are smaller buyers. Generally Stationey stores could purchase
+# worth Rs.25,000 but kiranas could do Rs.1500-Rs.2000 every month.
+# A challenge is the Stationery distributors are different from the FMCG guys. So they have to find new distributors for this
+# The stationey business which is non-pens is generally lower margins since this is outsourced
+# Earlier they were never targeting new retailers and kiranas, they only sold through stationey stores, but after getting a
+# consulting group(Vector) they realised that they need to add more touchpoints. Only then will they grow.
+# Distribution System: Buffer Penetration Replenishment: So for example if a channel partner sells 1 carton, it will trigger automatically
+# in the system and will go for production. 
+# Management sees themselves as a FMCG co. They want to be the colgate of pens. 
 ```
 
   
@@ -85,6 +106,7 @@
 #### Guidance [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/magnifying-glass.svg" />][investor_relations]
 ```diff
 
-# 
+# FY2025 Revenue: 700 Crores and Pentatonic share: 35%
+
 
 
