--- a/Systems/100_Baggers/Linc Ltd/Notes/FY22 Q4.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY22 Q4.md
@@ -13,18 +13,13 @@
 
 #### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][fin]
 ```diff
+
 ! Market Share of Linc is 8%
 ! RAW Material Cost is directly proportional to Crude & Polymer Prices. Impacts a lot on Gross Profit Margin.  
 ! Other cost includes: freight rates (transportation cost), marketing, new customer acquisition.  
 ! Will continue giving dividend in future.
 ! Pentonic revenues are expected to grow to over 32%, while Deli is expected to contribute about 15%, till FY25.
 ! ROCE is very low now. Will be targeting ROE of 18% and ROCE of 20% range by FY25
-! 
-! 
-! 
-! 
-! 
-
 
 ```
 
@@ -43,60 +38,44 @@
 + New products will be added every year or every half year.
 + If the product has a minimalistic designed and contemporarily designed the life cycle is really long.
 + Pentonic would be a brand for atleast 10-15 years.
-+ 
-+ 
-+ 
-+ 
-+ 
-
-
-
-
-
 
 ```
+
+
+
+
+
 #### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][capex]
 ```diff
+
 - The total cost for the expansion plan at Gujarat is expected to be around 50 Cr. First Phase will cost 35 Cr, will be operational by FY24.
 - Expansion is largely funded by International & small loans, not more than 15 Cr.
 - The Co. company has in-house as well as out sourced production, to reduce Capex on building plants and machineries.
--
--
--
--
--
-
-
-
-
-
 
 ```
+
+
+
 #### Strategy [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Strategy%20Logo%203.jpg" />][strategy]
 ```diff
+
 # Increasing Touch Points: Co. increased its touch points from 5000 to 1 Lakh outlets from FY20 to FY22.Expects to reach 5 Lakh touch points by FY25.  
 # Higher Margin Products: Introduction of Pentonic. No other pen company has dared to envision a pen at Rs. 10 price point without metal clip, transfer film or individual packaging. Co. is focusing on growing Pentonic more and add more products in its portfolio.
 # Stationary Products: Linc is India’s exclusive importer and distributor for **Deli**, which is Asia's largest stationary manufacturer. It is expected that Deli business should add about Rs. 100 crores to the company's turnover in 3 to 4 years’ time.  
 # Step up existing capacity Co. has an expansion plan wherein it is putting up a new manufacturing facility in the existing location at Gujarat. This will double to in-house capacity (10Lakh to 20Lakh pens per day).  
 # Environmental, Social & Governance: Substituting plastic wrapper packaging with paper bulk packaging. Working on recycling of used pens.  
-
 # Increasing distrubution network, brand awareness, new product launch : to increase market share.
 
-
 ```
+
+
+
+
 #### Industry   [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Industry%20Logo%201.jpg" />][ind]
 ```diff
+
 @@ Education market in India is expected to grow at 14% p.a. creating a huge market for pens @@
-@@ Writing instrument market : Rs. 10,000 Cr
-@@
-@@
-@@
-@@
-@@ 
-
-
-
-
+@@ Writing instrument market : Rs. 10,000 Cr. @@
 
 ```
 #### Guidance [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/magnifying-glass.svg" />][investor_relations]
@@ -110,19 +89,6 @@
 # This is the only company to target Kirana stores.
 # Aiming on increasing the company's market share from 8% to atleast 20%. 
 # Pentonic is going to be the larget single pen brand.
-#
-
-
-
-
-
-
-
-
-
-
-
-
 
 ```
 
