--- a/Systems/100_Baggers/Linc Ltd/Notes/FY22 Q4.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY22 Q4.md
@@ -14,8 +14,7 @@
 #### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][fin]
 ```diff
 
-! Market Share of Linc is 8%
-! RAW Material Cost is directly proportional to Crude & Polymer Prices. Impacts a lot on Gross Profit Margin.  
+! Gross profit margin is highly affted by Crude & Polymer prices (RAW Material Cost is directly proportional to Crude & Polymer Prices).
 ! Other cost includes: freight rates (transportation cost), marketing, new customer acquisition.  
 ! Will continue giving dividend in future.
 ! Pentonic revenues are expected to grow to over 32%, while Deli is expected to contribute about 15%, till FY25.
@@ -33,7 +32,7 @@
 + Co. earlier focused on lower segment market, but it has shifted focus to Rs. 10 & above segment, starting with Pentonic in 2019.  
 + USP of Pentonic: Minimal, Writing smoothness, Unique Design.  
 + Pentonic contributes to 25% of Revenue.
-+ GPM of Pentonic: 43% (Very High)  , helps in overall increase in GPM.
++ GPM of Pentonic: 43% (Very High), helps in overall increase in GPM.
 + Will be launching a rectractable gel pen at Rs. 30/- in June, and then another gel pen at Rs. 20/-. 
 + New products will be added every year or every half year.
 + If the product has a minimalistic designed and contemporarily designed the life cycle is really long.
@@ -61,7 +60,7 @@
 
 # Increasing Touch Points: Co. increased its touch points from 5000 to 1 Lakh outlets from FY20 to FY22.Expects to reach 5 Lakh touch points by FY25.  
 # Higher Margin Products: Introduction of Pentonic. No other pen company has dared to envision a pen at Rs. 10 price point without metal clip, transfer film or individual packaging. Co. is focusing on growing Pentonic more and add more products in its portfolio.
-# Stationary Products: Linc is India’s exclusive importer and distributor for **Deli**, which is Asia's largest stationary manufacturer. It is expected that Deli business should add about Rs. 100 crores to the company's turnover in 3 to 4 years’ time.  
+# Stationary Products: Linc is India’s exclusive importer and distributor for Deli, which is Asia's largest stationary manufacturer. It is expected that Deli business should add about Rs. 100 crores to the company's turnover in 3 to 4 years’ time.  
 # Step up existing capacity Co. has an expansion plan wherein it is putting up a new manufacturing facility in the existing location at Gujarat. This will double to in-house capacity (10Lakh to 20Lakh pens per day).  
 # Environmental, Social & Governance: Substituting plastic wrapper packaging with paper bulk packaging. Working on recycling of used pens.  
 # Increasing distrubution network, brand awareness, new product launch : to increase market share.
@@ -74,7 +73,8 @@
 #### Industry   [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Industry%20Logo%201.jpg" />][ind]
 ```diff
 
-@@ Education market in India is expected to grow at 14% p.a. creating a huge market for pens @@
+@@ Market Share of Linc is 8% @@
+@@ Education market in India is expected to grow at 14% p.a., creating a huge market for pens. @@
 @@ Writing instrument market : Rs. 10,000 Cr. @@
 
 ```
