--- a/Systems/100_Baggers/Linc Ltd/Notes/FY22 Q4.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY22 Q4.md
@@ -14,7 +14,7 @@
 #### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][fin]
 ```diff
 
-! Gross profit margin is highly affted by Crude & Polymer prices (RAW Material Cost is directly proportional to Crude & Polymer Prices).
+! Gross profit margin is highly affected by Crude & Polymer prices (RAW Material Cost is directly proportional to Crude & Polymer Prices).
 ! Other cost includes: freight rates (transportation cost), marketing, new customer acquisition.  
 ! Will continue giving dividend in future.
 ! Pentonic revenues are expected to grow to over 32%, while Deli is expected to contribute about 15%, till FY25.
