--- a/Systems/100_Baggers/Linc Ltd/Notes/FY22 Q4.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY22 Q4.md
@@ -74,7 +74,7 @@
 ```diff
 
 @@ Market Share of Linc is 8% @@
-@@ Education market in India is expected to grow at 14% p.a., creating a huge market for pens. @@
+@@ Education market in India is expected to grow at 14% p.a. creating a huge market for pens. @@
 @@ Writing instrument market : Rs. 10,000 Cr. @@
 
 ```
@@ -88,7 +88,7 @@
 # 45% of the pens are sold from non-stationary outlets, which is in favout of them as there is not any extra cost to access the non-stationary outlet for the existing distributors servicing stationary.
 # This is the only company to target Kirana stores.
 # Aiming on increasing the company's market share from 8% to atleast 20%. 
-# Pentonic is going to be the larget single pen brand.
+# Pentonic is going to be the largest single pen brand.
 
 ```
 
