--- a/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q2.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q2.md
@@ -14,10 +14,12 @@
 #### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][fin]
 ```diff
 
-! Margin Expansion: 1. Increase in share of higher margin products 2. Strengthing of the US dollar 3.Rationalisation of polymer prices
+! Margin Expansion: 1. Increase in share of higher margin products 2. Strengthing of the US dollar 3.Rationalisation of polymer prices 3. 70-80 Lakh benefit due to yen
+! and around 30-40 Lakhs benefit due to USD
 ! Exports: 22% of Sales
 ! Japanese yen depreciated against the dollar, hence reduction in procurement cost of Uniball
-
+! Debt: Company is debt free now
+!  
 
 
 ```
@@ -27,9 +29,11 @@
 
 #### Products [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Products%20Logo%201.jpg" />][products]
 ```diff
-
-+ 
-
++ Deli: Want to take the Deli product revenue to 100 crores in 4-5 years time
++ Pentatonic: Launched in FY19: Has seen huge traction 
++ Pentatonic: 3 pen categories: 1.Rs.10 Ball pen 2.Rs.10 Gel-pen 3.Rs.20 Ball pen B-RT and to launch the Rs.40 product in December
++ Did a test launch for the same and it was good
++ For every 10 pens sold, 2 refills are sold. This is an industry average
 
 
 
@@ -43,7 +47,9 @@
 
 #### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][capex]
 ```diff
-- 
+- Modular expansion: Final target is 20L pens/day. The expansion will happen in a phased manner.
+- Critical equipment and machinery will be added as and
+- when required. First phase: 5 Lakh pens/day- total cost will be Rs.35 Crores
 
 
 
@@ -57,8 +63,12 @@
 #### Strategy [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Strategy%20Logo%203.jpg" />][strategy]
 ```diff
 # Linc 2.0: Five point strategy: 
-# 
-
+# 1.Touchpoints: Increase touchpoints. India has 10Mn kirana outlets. Currently Linc has reached 2.4L outlets.
+# Will take this number to 5L by FY25.
+# 2.Focus on higher margin products. Most developments under the pentatonic portfolio: 3 products to be launch in FY24
+# 4.Stationery Products: Using the Deli brand, they will make bigger inroads.
+# Want to increase the total touchpoints to 5Lakh stores 
+# the stationery and non pen category is as big as the pen category: But it will take sometime to setup and grow
 
 
 ```
@@ -69,7 +79,8 @@
 ```diff
 
 @@ Market Share: 8% of the writing Instruments market @@
-
+@@ Industry is fragmented: It has a low entry barrier: Main players are: 1. Cello 2.Flair 3.Reynolds 4.Rorito @@
+@@ Industry is expected to grow at 6% 
 
 
 ```
@@ -77,7 +88,11 @@
 #### Guidance [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/magnifying-glass.svg" />][investor_relations]
 ```diff
 
-# 
+# FY25 Topline: 650 Crores
+# FY25 Pentatonic: 32% of Revenues
+# FY25 ROE: >20%
+# FY25 Ebitda : 14%
+
 
 
 
