--- a/Systems/100_Baggers/Linc Ltd/Notes/FY24 Q1.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY24 Q1.md
@@ -74,9 +74,7 @@ Equipment machinery will be added in a modular fashion in sync with demand needs
 Infra work will be completed with 17 crores from Internal accruals.
 
 
-
-
-<h2 align="center"> FY24 Q1: Linc Ltd.</h2>
+<h2 align="center"> FY23 Q1: Linc Ltd.</h2>
 <h4 align="center"> Updated by: Rishabh Nahar/Purnanand Kulkarni</h4>
 <h4 align="center"> Date: 09.08.2023</h4>
 
@@ -88,14 +86,11 @@ Infra work will be completed with 17 crores from Internal accruals.
 [investor_relations]: https://lincpen.com/investor-relations
 
 
-  
 
 #### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][fin]
 ```diff
-! This will contain all the Financial notes of the company discussed in the Concall other than numbers.
 
-
-
+! Gross profit margin is highly affected by Crude & Polymer prices (RAW Material Cost is directly proportional to Crude & Polymer Prices).
 
 
 ```
@@ -106,15 +101,11 @@ Infra work will be completed with 17 crores from Internal accruals.
 
 #### Products [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Products%20Logo%201.jpg" />][products]
 ```diff
-+ This will contain all the Products related information given by the company during the Concall.
 
-
-
-
++ Co. earlier focused on lower segment market, but it has shifted focus to Rs. 10 & above segment, starting with Pentonic in 2019.  
 
 
 ```
-
 
 
 
@@ -123,54 +114,37 @@ Infra work will be completed with 17 crores from Internal accruals.
 #### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][capex]
 ```diff
 
-All Information on CapEx in this block.
-
-Can highlight sentences as follows :
-
-- Expensiture was very high this year.
-
-- Other Information
-
-
+- The total cost for the expansion plan at Gujarat is expected to be around 50 Cr. First Phase will cost 35 Cr, will be operational by FY24.
 
 
 ```
+
 
 
 #### Strategy [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Strategy%20Logo%203.jpg" />][strategy]
 ```diff
-# grey
 
-
-
-
-
+# Increasing Touch Points: Co. increased its touch points from 5000 to 1 Lakh outlets from FY20 to FY22.Expects to reach 5 Lakh touch points by FY25.  
 
 
 ```
+
+
 
 
 #### Industry   [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Industry%20Logo%201.jpg" />][ind]
 ```diff
-@@ purple @@
 
-
-
-
+@@ Market Share of Linc is 8% @@
 
 
 ```
-
-
 #### Guidance [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/magnifying-glass.svg" />][investor_relations]
 ```diff
-# grey
+
+# Trying to leverage the existing network, to distribute stationary products other than pens.
+
 ```
-
-
-
-
-
 
 
 
