--- a/Systems/100_Baggers/Linc Ltd/Notes/FY24 Q1.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY24 Q1.md
@@ -1,79 +1,3 @@
-## Q1FY24 Concall Notes:
-Primary consumers are school students. Hence the business goes through some seasonality. Hence during Q1 becauase of
-school holidays and vacations consumption sees a drop. 
-Production is 50:50 Inhouse and outsourced just like many other FMCG manufacturers. Helps during lean periods.
-Currently their main way of selling is through retailers. They keep good relations with retailers and keep giving them
-good display units to keep. 
-Overall they are going big on Pentatonic space. They want that to be a household name. 
-Rs.10 Products contribute to 60% of Revenues. < Rs.10 is 40% of Revenues.
-
-##### Industry:
-Flair pens will be listed soon. 
-
-
-### Products:
-
-##### Pentatonic:
-Pentatonic Share: 36% of Sales
-Pentatonic is the new hero product for the company. It should contribute to 40% of Sales this year. Gross profit margins are expanding due to this.
-Launched a Rs.40 pen in some markets. Only did a test run and the response was great. They will now do a proper distribution and then run ads for these.
-
-
-##### Morris / Linc Partnership: 
-
-Morris Linc Private Limited( Subsidiary Co.)
-Morris is a leading stationery manufacturer. It will be producing and selling the products in India and outside of India.
-Morris found that manufacturing in korea is not economical, hence they want to setup base in India.
-Rs.30-50 is the price range, more premium products.
-
-##### Other Products ( Geometry Boxes, Wooden Pencils, Erasers, Sharpeners etc)
-
-These just contribute to 5% of sales. 
-
-##### Touchpoints:
-Currently having 2.45 Lakh Touchpoints. 
-
-##### Deli:
-Stationey Brand doing 6.8 Crores in revenue. 50% of Deli revenues in CHina come from Ecom space. So that
-improves the opportunity for these guys. Currently overall Ecom is 3% of total Revenues.
-FY23 Deli was 25 Crores and by FY25- 75 Crores estimate
-
-##### Exports:
-Export Revenue:   16% of Sales. On exports the gross margins are better by 4-5%. 
-Currently exporting to 40-50 Countries. Africa, Middle East, Russia, Brazil, North America( Waiting for a good breakthrough over here)
-
-##### Marketing:
-Currently Advertising as a % of Sales is 3%. Currently using print media, social media campaigns and few outdoor cities. But not running
-any TV campaigns becuase they do not have the budget. Since margins are thin in this business.
-
-##### Financials:
-
-South and West Zone Revenues: 43% of Sales
-Writing Instrument Market Share: 7%
-
-Company is now debt free, has paid off all debt over the years and holds free cash of 15 Crores now.
-
-###### Guidance:
-FY24:
-Revenue: 600-625 Crores
-Ebitda Margins: 13-14%
-
-
-FY25: 
-Revenue: 750 Crores
-Pentatonic :40% of Revenue
-Ebitda Margin: 15%
-ROI: 21%
-Deli: 75 Crores Revenue
-
-All the guidance is based on the growth in pentatonic. The management is very bullish on pentatonic sales.Q1 pentatonic grew at 30% hence the guidance.
-Ecom is 3% of total revenues.
-##### Capex:
-Modular Expansion plans next to existing facilities, Basic infra has been made to double capacity to 20 Lakh pens per day,
-Equipment machinery will be added in a modular fashion in sync with demand needs. Total cost of Project = 50 Crores,
-Infra work will be completed with 17 crores from Internal accruals.
-
-
 <h2 align="center"> FY23 Q1: Linc Ltd.</h2>
 <h4 align="center"> Updated by: Rishabh Nahar/Purnanand Kulkarni</h4>
 <h4 align="center"> Date: 09.08.2023</h4>
@@ -86,11 +10,40 @@ Infra work will be completed with 17 crores from Internal accruals.
 [investor_relations]: https://lincpen.com/investor-relations
 
 
+## Q1 FY24 Concall Notes:
+
+```
+
+Primary consumers are school students. Hence the business goes through some seasonality. Hence during Q1 because of
+school holidays and vacations consumption sees a drop. 
+Production is 50:50 Inhouse and outsourced just like many other FMCG manufacturers. Helps during lean periods.
+Currently their main way of selling is through retailers. They keep good relations with retailers and keep giving them
+good display units to keep. 
+Overall they are going big on Pentatonic space. They want that to be a household name. 
+Rs.10 Products contribute to 60% of Revenues. < Rs.10 is 40% of Revenues.
+
+```
+
+
+
+
+
 
 #### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][fin]
 ```diff
 
-! Gross profit margin is highly affected by Crude & Polymer prices (RAW Material Cost is directly proportional to Crude & Polymer Prices).
+! South and West Zone Revenues: 43% of Sales
+! Writing Instrument Market Share: 7%
+! Company is now debt free, has paid off all debt over the years and holds free cash of 15 Crores now.
+
+! Exports:
+! Export Revenue:   16% of Sales. On exports the gross margins are better by 4-5%. 
+! Currently exporting to 40-50 Countries. Africa, Middle East, Russia, Brazil, North America( Waiting for a good breakthrough over here)
+
+! Marketing:
+! Currently Advertising as a % of Sales is 3%. Currently using print media, social media campaigns and few outdoor cities.
+! But not running any TV campaigns becuase they do not have the budget. Since margins are thin in this business.
+
 
 
 ```
@@ -103,6 +56,27 @@ Infra work will be completed with 17 crores from Internal accruals.
 ```diff
 
 + Co. earlier focused on lower segment market, but it has shifted focus to Rs. 10 & above segment, starting with Pentonic in 2019.  
++ Pentatonic:
++ Pentatonic Share: 36% of Sales
++ Pentatonic is the new hero product for the company. It should contribute to 40% of Sales this year. Gross profit margins are expanding due to this.
++ Launched a Rs.40 pen in some markets. Only did a test run and the response was great. They will now do a proper distribution and then run ads for these.
+
+
++ Morris / Linc Partnership: 
+
++ Morris Linc Private Limited( Subsidiary Co.)
++ Morris is a leading stationery manufacturer. It will be producing and selling the products in India and outside of India.
++ Morris found that manufacturing in korea is not economical, hence they want to setup base in India.
++ Rs.30-50 is the price range, more premium products.
+
+
++ Deli:
++ Stationey Brand doing 6.8 Crores in revenue. 50% of Deli revenues in CHina come from Ecom space. So that
++ improves the opportunity for these guys. Currently overall Ecom is 3% of total Revenues.
++ FY23 Deli was 25 Crores and by FY25- 75 Crores estimate
+
++ Other Products ( Geometry Boxes, Wooden Pencils, Erasers, Sharpeners etc). These just contribute to 5% of sales.
+
 
 
 ```
@@ -114,8 +88,10 @@ Infra work will be completed with 17 crores from Internal accruals.
 #### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][capex]
 ```diff
 
-- The total cost for the expansion plan at Gujarat is expected to be around 50 Cr. First Phase will cost 35 Cr, will be operational by FY24.
 
+- Modular Expansion plans next to existing facilities, Basic infra has been made to double capacity to 20 Lakh pens per day,
+- Equipment machinery will be added in a modular fashion in sync with demand needs. Total cost of Project = 50 Crores,
+- Infra work will be completed with 17 crores from Internal accruals.
 
 ```
 
@@ -124,7 +100,8 @@ Infra work will be completed with 17 crores from Internal accruals.
 #### Strategy [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Strategy%20Logo%203.jpg" />][strategy]
 ```diff
 
-# Increasing Touch Points: Co. increased its touch points from 5000 to 1 Lakh outlets from FY20 to FY22.Expects to reach 5 Lakh touch points by FY25.  
+# Touchpoints:
+# Currently having 2.45 Lakh Touchpoints.
 
 
 ```
@@ -135,14 +112,27 @@ Infra work will be completed with 17 crores from Internal accruals.
 #### Industry   [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Industry%20Logo%201.jpg" />][ind]
 ```diff
 
-@@ Market Share of Linc is 8% @@
+@@ Flair pens will be listed soon. @@
 
 
 ```
 #### Guidance [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/magnifying-glass.svg" />][investor_relations]
 ```diff
 
-# Trying to leverage the existing network, to distribute stationary products other than pens.
+# FY24:
+# Revenue: 600-625 Crores
+# Ebitda Margins: 13-14%
+
+
+# FY25: 
+# Revenue: 750 Crores
+# Pentatonic :40% of Revenue
+# Ebitda Margin: 15%
+# ROI: 21%
+# Deli: 75 Crores Revenue
+
+# All the guidance is based on the growth in pentatonic. The management is very bullish on pentatonic sales.Q1 pentatonic grew at 30% hence the guidance.
+# Ecom is 3% of total revenues.
 
 ```
 
