--- a/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q1.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q1.md
@@ -8,7 +8,7 @@
 [strategy]: https://eresh-zealous.medium.com/
 [ind]: https://www.verifiedmarketresearch.com/product/india-writing-instruments-market/
 [investor_relations]: https://lincpen.com/investor-relations
-[pdf] : https://www.bseindia.com/xml-data/corpfiling/AttachHis/7563055b-2c41-4b1a-9c16-53231b2789e9.pdf
+[pdf] : https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/concalls/FY23%20Q1%20Concall%20Linc%20Ltd.pdf
 
 
 
@@ -80,6 +80,6 @@
 ```
 
 
-[<img align="right" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Pdf%20Logo%201.png" />][pdf]
+[<img align="right" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Pdf%20Logo%201.png" />][]
 
 
