--- a/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q1.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q1.md
@@ -1,17 +1,23 @@
-<h2 align="center"> FY23 Q1: Linc Ltd.</h2>
-<h4 align="center"> Updated by: Rishabh Nahar/Purnanand Kulkarni</h4>
-<h4 align="center"> Date: 09.08.2023</h4>
-
 [fin]: https://www.screener.in/company/LINC/
 [products]: https://lincpen.com/products
 [capex]: https://eresh-zealous.medium.com/
 [strategy]: https://eresh-zealous.medium.com/
 [ind]: https://www.verifiedmarketresearch.com/product/india-writing-instruments-market/
 [investor_relations]: https://lincpen.com/investor-relations
-[pdf] : https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/concalls/FY23%20Q1%20Concall%20Linc%20Ltd.pdf
+[concall]: https://www.bseindia.com/xml-data/corpfiling/AttachHis/7563055b-2c41-4b1a-9c16-53231b2789e9.pdf
+
+
+<div align="center">
+  
+##  FY23 Q1: Linc Ltd. $~$ [<img alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Pdf%20Logo%201.png" />][concall]
+####  Updated by: Rishabh Nahar/Purnanand Kulkarni
+####  Date: 09.08.2023
+
+</div>
 
 
 
+  
 #### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][fin]
 ```diff
 
@@ -52,6 +58,9 @@
 # Increasing Touch Points: Co. increased its touch points from 5000 to 1 Lakh outlets from FY20 to FY22.Expects to reach 5 Lakh touch points by FY25.  
 
 
+
+
+
 ```
 
 
@@ -63,6 +72,9 @@
 @@ Market Share of Linc is 8% @@
 
 
+
+
+
 ```
 #### Guidance [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/magnifying-glass.svg" />][investor_relations]
 ```diff
@@ -70,16 +82,15 @@
 # Trying to leverage the existing network, to distribute stationary products other than pens.
 
 
-```
-#### Pdf [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Pdf%20Logo%201.png" />][pdf]
-```diff
 
-# Trying to leverage the existing network, to distribute stationary products other than pens.
 
 
 ```
 
 
-[<img align="right" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Pdf%20Logo%201.png" />][]
+<div align="center">
+ Website : https://lincpen.com/
+</div>
+
 
 
