--- a/Systems/100_Baggers/Linc Ltd/Notes/FY22 Q4.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY22 Q4.md
@@ -1,13 +1,20 @@
-<h2 align="center"> FY22 Q4: Linc Ltd.</h2>
-<h4 align="center"> Updated by: Rishabh Nahar/Purnanand Kulkarni</h4>
-<h4 align="center"> Date: 09.08.2023</h4>
-
 [fin]: https://www.screener.in/company/LINC/
 [products]: https://lincpen.com/products
 [capex]: https://eresh-zealous.medium.com/
 [strategy]: https://eresh-zealous.medium.com/
 [ind]: https://www.verifiedmarketresearch.com/product/india-writing-instruments-market/
 [investor_relations]: https://lincpen.com/investor-relations
+[concall]: https://www.bseindia.com/xml-data/corpfiling/AttachHis/90a81d15-460e-4705-9f7f-6618695b4ac8.pdf
+
+
+<div align="center">
+  
+##  FY22 Q4: Linc Ltd. $~$ [<img alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Pdf%20Logo%201.png" />][concall]
+####  Updated by: Rishabh Nahar/Purnanand Kulkarni
+####  Date: 09.08.2023
+
+</div>
+
 
 
 
@@ -100,9 +107,13 @@
 # Aiming on increasing the company's market share from 8% to atleast 20%. 
 # Pentonic is going to be the largest single pen brand.
 
+
+
 ```
 
-
+<div align="center">
+ Website : https://lincpen.com/
+</div>
 
 
 
