--- a/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q2.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q2.md
@@ -1,14 +1,20 @@
-
-<h2 align="center"> FY23 Q2: Linc Ltd.</h2>
-<h4 align="center"> Updated by: Rishabh Nahar/Purnanand Kulkarni</h4>
-<h4 align="center"> Date: 09.08.2023</h4>
-
 [fin]: https://www.screener.in/company/LINC/
 [products]: https://lincpen.com/products
 [capex]: https://eresh-zealous.medium.com/
 [strategy]: https://eresh-zealous.medium.com/
 [ind]: https://www.verifiedmarketresearch.com/product/india-writing-instruments-market/
 [investor_relations]: https://lincpen.com/investor-relations
+[concall]: https://www.bseindia.com/xml-data/corpfiling/AttachHis/5b8f0d09-debd-4f49-a101-f22f05bc5c3d.pdf
+
+
+<div align="center">
+  
+##  FY22 Q4: Linc Ltd. $~$ [<img alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Pdf%20Logo%201.png" />][concall]
+####  Updated by: Rishabh Nahar/Purnanand Kulkarni
+####  Date: 09.08.2023
+
+</div>
+
 
   
 #### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][fin]
@@ -100,6 +106,9 @@
 
 ```
 
+<div align="center">
+ Website : https://lincpen.com/
+</div>
 
 
 
