--- a/Systems/100_Baggers/Linc Ltd/Notes/FY24 Q1.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY24 Q1.md
@@ -1,13 +1,19 @@
-<h2 align="center"> FY23 Q1: Linc Ltd.</h2>
-<h4 align="center"> Updated by: Rishabh Nahar/Purnanand Kulkarni</h4>
-<h4 align="center"> Date: 09.08.2023</h4>
-
 [fin]: https://www.screener.in/company/LINC/
 [products]: https://lincpen.com/products
 [capex]: https://eresh-zealous.medium.com/
 [strategy]: https://eresh-zealous.medium.com/
 [ind]: https://www.verifiedmarketresearch.com/product/india-writing-instruments-market/
 [investor_relations]: https://lincpen.com/investor-relations
+[concall]: https://www.bseindia.com/xml-data/corpfiling/AttachLive/3ce7beeb-f5a7-45a5-b6f1-49cf6e34753f.pdf
+
+
+<div align="center">
+  
+##  FY24 Q1: Linc Ltd. $~$ [<img alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Pdf%20Logo%201.png" />][concall]
+####  Updated by: Rishabh Nahar/Purnanand Kulkarni
+####  Date: 09.08.2023
+
+</div>
 
 
 ## Q1 FY24 Concall Notes:
@@ -136,6 +142,9 @@ Rs.10 Products contribute to 60% of Revenues. < Rs.10 is 40% of Revenues.
 
 ```
 
+<div align="center">
+ Website : https://lincpen.com/
+</div>
 
 
 
