--- a/Systems/100_Baggers/Linc Ltd/Notes/FY24 Q1.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY24 Q1.md
@@ -16,17 +16,17 @@
 </div>
 
 
-## Q1 FY24 Concall Notes:
+> Q1 FY24 Concall Notes:
 
 ```
 
-Primary consumers are school students. Hence the business goes through some seasonality. Hence during Q1 because of
-school holidays and vacations consumption sees a drop. 
-Production is 50:50 Inhouse and outsourced just like many other FMCG manufacturers. Helps during lean periods.
-Currently their main way of selling is through retailers. They keep good relations with retailers and keep giving them
-good display units to keep. 
-Overall they are going big on Pentatonic space. They want that to be a household name. 
-Rs.10 Products contribute to 60% of Revenues. < Rs.10 is 40% of Revenues.
+> Primary consumers are school students. Hence the business goes through some seasonality. Hence during Q1 because of
+> school holidays and vacations consumption sees a drop. 
+> Production is 50:50 Inhouse and outsourced just like many other FMCG manufacturers. Helps during lean periods.
+> Currently their main way of selling is through retailers. They keep good relations with retailers and keep giving them
+> good display units to keep. 
+> Overall they are going big on Pentatonic space. They want that to be a household name. 
+> Rs.10 Products contribute to 60% of Revenues. < Rs.10 is 40% of Revenues.
 
 ```
 
