--- a/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q1.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q1.md
@@ -21,7 +21,7 @@
 #### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][fin]
 ```diff
 
-! Gross profit margin is highly affected by Crude & Polymer prices (RAW Material Cost is directly proportional to Crude & Polymer Prices).
+! Increasing crude & polymer prices are affecting the input cost.
 
 
 ```
@@ -33,7 +33,13 @@
 #### Products [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Products%20Logo%201.jpg" />][products]
 ```diff
 
-+ Co. earlier focused on lower segment market, but it has shifted focus to Rs. 10 & above segment, starting with Pentonic in 2019.  
++ Focusing on Rs. 10 & above segment.
++ USP of Pentonic is perceived value due to its unique design.
++ Pentonic Contributes to 30% of total Revenue.
++ GPM of Pentonic is 40%.
++ Will be launching pens at Rs20 and Rs40 under Pentonic portfolio.
++ Co. expects to generates min. revenue of Rs 100 Cr through tie up with Deli, in 3-4 years.
++ 
 
 
 ```
@@ -75,11 +81,15 @@
 
 
 
+
 ```
 #### Guidance [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/magnifying-glass.svg" />][investor_relations]
 ```diff
 
+# Reaching total of 2.3 lakh outlets (touch points), including stationary outlets.
+# Expects to reach 5 lakh touch points by FY25.
 # Trying to leverage the existing network, to distribute stationary products other than pens.
+# Working towards reducing Carbon Footprints.
 
 
 
